--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.4",
     "firebase": "^7.10.0",
+    "lodash": "^4.17.15",
     "materialize-css": "^1.0.0-rc.2",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.0",
+    "vue-paginate": "^3.6.0",
     "vue-router": "^3.1.5",
+    "vuejs-paginate": "^2.1.0",
     "vuelidate": "^0.7.5",
     "vuex": "^3.1.2"
   },
